--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ folium==0.14.0
 streamlit-folium==0.11.1
 streamlit_folium==0.11.1
 torch==1.12.1
-torch_geometric==2.2.0
+torch-geometric==2.2.0
+torch-geometric-temporal==0.54.0
+torch-sparse==0.6.16
+torch-scatter==2.1.0
 pyvis==0.3.2
-pytorch-sparse>=0.5.1
+
