--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ numpy==1.24.2
 pandas==1.5.3
 seaborn==0.12.2
 torch==1.12.1
-torch-sparse==0.6.16
-torch-scatter==2.1.0
-torch-geometric==2.2.0
+torch_sparse==0.6.16
+torch_scatter==2.1.0
+torch_geometric==2.2.0
 pyvis==0.3.2
 
