--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy==1.24.2
 pandas==1.5.3
 seaborn==0.12.2
 torch==1.12.1
-torch_scatter==2.1.0
-torch_geometric==2.2.0
+torch_scatter==2.1.0+cpu
+torch_geometric==2.2.0+cpu
 pyvis==0.3.2
 
