--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,9 @@ seaborn==0.12.2
 
 -f https://download.pytorch.org/whl/cpu/torch_stable.html
 -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
-torch==1.12.1+cpu
+torch==1.12.1
 torch-scatter
 torch-sparse
-torch-geometric
 torch_geometric==2.2.0
 pyvis==0.3.2
 
