--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ seaborn==0.12.2
 -f https://download.pytorch.org/whl/cpu/torch_stable.html
 -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
 torch==1.12.1
-torch-scatter
-torch-sparse
+torch-geometric==2.2.0
+torch-sparse==0.6.16
+torch-scatter==2.1.0
 torch_geometric==2.2.0
 pyvis==0.3.2
 
