--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -f https://download.pytorch.org/whl/cpu/torch_stable.html
 -f https://data.pyg.org/whl/torch-1.3.0+cpu.html
-torch==1.3.°+cpu
+torch==1.3.0+cpu
 torch-sparse==0.6.16
 torch-scatter==2.1.0
 torch_geometric==2.2.0
